<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.lab09.ngnsip.view.VoiceCallActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>

        <Button
            android:id="@+id/unregister_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unregister"/>

        <TextView
            android:id="@+id/registration_status_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/unregistered"/>

    </LinearLayout>

    <EditText
        android:id="@+id/SIP_address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minLines="1"
        android:maxLines="1"
        android:inputType="text"
        android:text="@string/test_number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/make_call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_call"/>

        <Button
            android:id="@+id/hang_up_call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hang_up_call"/>

        <TextView
            android:id="@+id/call_status_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_call"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dtmf_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dtmf"/>

        <EditText
            android:id="@+id/dtmf_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/codes"/>

    </LinearLayout>

    <Button
        android:id="@+id/chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/chat"/>

</LinearLayout>
